# ScourRL

./: .gitignore  Dockerfile.hud  README.md  env.py  pyproject.toml  requirements.txt  tasks.py  train_hud.py
.hud/: config.json
cart_scout/: __init__.py  data.py  episodes.py  reward.py  schema.py  structured_cdp.py  task_bank.py
data/: example_snapshots.jsonl  shopping_eval_200.jsonl  shopping_tasks.jsonl  shopping_train_1000.jsonl
docs/: observability.md  spec_summary.md
fireworks_rft/: evaluator.py  remote_dataset.py  remote_evaluator.py  remote_server.py
results/: error_analysis_training.json  error_analysis_training.md  grpo_training_report_qwen3_8b.md  training_stats.csv
scripts/: generate_episodes.py  generate_task_samples.py  run_browser_use_eval.py  run_local_env.sh  run_structured_cdp_eval.py  train_rl.py
tests/: test_env_template.py  test_episode_generation.py  test_fireworks_evaluator.py  test_remote_server.py  test_reward.py  test_structured_cdp.py  test_training_artifacts.py
